--- a/WPF/Android/Views/MainWindow.xaml
+++ b/WPF/Android/Views/MainWindow.xaml
@@ -34,7 +34,7 @@
                 <Button Width="40" Height="40" Click="HamburgerButton_Click" Background="Transparent" BorderBrush="Transparent">
                     <Image Source="{StaticResource HamburgerIcon}"/>
                 </Button>
-                <Label x:Name="HeaderLabel" Content="My accommodations and statistics" VerticalAlignment="Center" FontWeight="DemiBold" FontSize="18" FontFamily="Global Sans Serif" Margin="0,0,0,0" />
+                <Label x:Name="HeaderLabel" Content="My accommodations and statistics" VerticalAlignment="Center" FontWeight="Bold" FontSize="18" FontFamily="Global Sans Serif" Margin="0,0,0,0" />
             </StackPanel>
             <Button Grid.Column="1" Height="40" Width="40" Background="Transparent" BorderBrush="Transparent">
                 <Image Source="{StaticResource HelpIcon}"/>
