--- a/WPF/Android/Views/ViewSelectedImagesWindow.xaml
+++ b/WPF/Android/Views/ViewSelectedImagesWindow.xaml
@@ -39,7 +39,7 @@
                     <DataTemplate>
                         <StackPanel>
                             <Image Source="{Binding Converter={StaticResource Converter}}" Height="120" Width="120" SnapsToDevicePixels="True"/>
-                            <Button Content="Delete" Click="DeleteSelectedImage_Click" Height="40" Width="70" Margin="0,-10,0,0"/>
+                            <Button Content="Delete" Click="DeleteSelectedImage_Click" Height="40" Width="70" Margin="0,-10,0,0" Background="{StaticResource Green}"/>
                         </StackPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
