--- a/WPF/Android/Views/SideMenuPage.xaml
+++ b/WPF/Android/Views/SideMenuPage.xaml
@@ -93,12 +93,12 @@
                     <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
                 <Image Height="40" Width="40" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Source="../../../Resources/Images/owner-icon.png" Margin="-5,0,0,0"/>
-                <Label x:Name="UsernameLabel" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0"
+                <Label x:Name="UsernameLabel" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"
                        FontSize="16" FontWeight="Bold" VerticalAlignment="Top" Padding="0" FontFamily="Global Sans Serif"/>
                 <Label Grid.Column="1" Grid.Row="1" FontSize="16" VerticalAlignment="Top"
                        HorizontalAlignment="Left" Content="Average Grade:" Height="25" Padding="0" FontFamily="Global Sans Serif"/>
 
-                <Label x:Name="SuperLabel" Grid.Column="2" Grid.Row="0" FontSize="16" VerticalAlignment="Top" Padding="0" HorizontalAlignment="Left" FontFamily="Global Sans Serif"/>
+                <Image x:Name="SuperImage" Grid.Column="0" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="20" Width="20" Margin="0,0,5,0"/>
                 <Label x:Name="AverageGradeLabel"  Grid.Column="2" Grid.Row="2" FontSize="16" VerticalAlignment="Top" HorizontalAlignment="Left" Height="25" FontFamily="Global Sans Serif" Padding="0"/>
 
             </Grid>
