--- a/WPF/Desktop/Views/TouristHomePage.xaml
+++ b/WPF/Desktop/Views/TouristHomePage.xaml
@@ -17,14 +17,22 @@
             <Setter Property="Height" Value="71"/>
             <Setter Property="Margin" Value="5"/>
         </Style>
+        <Style TargetType="Border" x:Key="BorderStyle">
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="0.5"/>
+        </Style>
         <Style TargetType="Button" x:Key="ButtonStyle">
-            <Setter Property="Background" Value="#88C0D0"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Width" Value="150"/>
-            <Setter Property="Height" Value="71"/>
-            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Background" Value="{StaticResource Green}"/>
+            <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            <Setter Property="Margin" Value="10"/>
             <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontSize" Value="18"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="Info">
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="FontSize" Value="12"/>
         </Style>
     </Page.Resources>
     <Border BorderBrush="Black" BorderThickness="1">
@@ -100,74 +108,101 @@
             </Grid>
         </Border>
 
-        <ScrollViewer Grid.Row="1" 
-                      Margin="10, 5, 10, 10">
-        <ItemsControl ItemsSource="{Binding ToursOnDisplay}">
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Border BorderBrush="Black" 
-                            BorderThickness="1"
-                            Width="1396"
-                            Height="265"
-                            Margin="0, 10">
-                    <Grid Margin="5">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition/>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition/>
+        <ScrollViewer Grid.Row="1"
+                      Margin="5">
+            <ItemsControl ItemsSource="{Binding ToursOnDisplay}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border Style="{StaticResource BorderStyle}">
+                                <Grid Margin="5">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="5*"/>
                                     </Grid.ColumnDefinitions>
-
-                                    <Image Source="{Binding ProfilePictures[0]}" 
-                                           Grid.Column="0" 
-                                           SnapsToDevicePixels="True"
-                                           Margin="5"
-                                           Width="230"
-                                           Height="230"/>           
-                        
-                                    <StackPanel Grid.Column="1">
-                                        <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" FontSize="40" FontWeight="Bold"/>
-                                        <TextBlock Text="{Binding LocationTemplate, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
-                                        <TextBlock Text="{Binding LanguageTemplate, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
-                                        <TextBlock Text="{Binding Duration, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
-                                    </StackPanel>
-                                    <Border Grid.Column="2"
-                                            BorderBrush="Black" 
-                                            BorderThickness="1">
-                                        <TextBlock Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"
-                                                   TextWrapping="Wrap"/>
-                                    </Border>
-                                    <StackPanel Grid.Column="3" Margin="10">
-                                        <Border Background="#2E3440"
-                                                Height="135"
-                                                Width="100">
-                                            <StackPanel VerticalAlignment="Center">
-                                                <Image Source="{StaticResource AccountIcon}" Width="30"/>
-                                                <WrapPanel  
-                                                            HorizontalAlignment="Center">
-                                                    <TextBlock Text="{Binding CurrentTouristNumber, UpdateSourceTrigger=PropertyChanged}" FontSize="32" FontWeight="Bold" Foreground="White"/>
-                                                    <TextBlock FontSize="32" 
-                                                               FontWeight="Bold"
-                                                               Foreground="White">
-                                                        /
-                                                    </TextBlock>
-                                                    <TextBlock Text="{Binding MaxTouristNumber, UpdateSourceTrigger=PropertyChanged}" FontSize="32" FontWeight="Bold" Foreground="White"/>
-                                                </WrapPanel>
-                                            </StackPanel>
+                                    <TextBlock Grid.ColumnSpan="2"
+                                               Text="{Binding Name}"
+                                               HorizontalAlignment="Center"
+                                               FontSize="18"
+                                               FontWeight="Bold"/>
+                                    <Grid Grid.Column="1"
+                                          Grid.Row="1"
+                                          VerticalAlignment="Bottom">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="2*"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Grid Grid.Column="0"
+                                              HorizontalAlignment="Center">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                            </Grid.RowDefinitions>
+                                            <TextBlock Style="{StaticResource Info}">
+                                                <TextBlock.Text>
+                                                    <MultiBinding StringFormat="{}{0}, {1}">
+                                                        <Binding Path="Location.City"/>
+                                                        <Binding Path="Location.Country"/>
+                                                    </MultiBinding>
+                                                </TextBlock.Text>
+                                            </TextBlock>
+                                            <TextBlock Grid.Row="1"
+                                                       Style="{StaticResource Info}">
+                                                <TextBlock.Text>
+                                                    <MultiBinding StringFormat="{}{0} - {1}">
+                                                        <Binding Path="Beggining"/>
+                                                        <Binding Path="End"/>
+                                                    </MultiBinding>
+                                                </TextBlock.Text>
+                                            </TextBlock>
+                                            <TextBlock Grid.Row="2"
+                                                       Text="{Binding Language.Name}"
+                                                       Style="{StaticResource Info}"/>
+                                            <TextBlock Grid.Row="3"
+                                                       Text="{Binding Duration}"
+                                                       Style="{StaticResource Info}"/>
+                                        </Grid>
+                                        <Border Style="{StaticResource BorderStyle}"
+                                                Grid.Column="1">
+                                            <TextBlock Text="{Binding Description}"
+                                                       TextWrapping="Wrap"
+                                                       Margin="5"/>
                                         </Border>
-                                        <Button x:Name="ReservationButton"
-                                                
-                                                Click="ReservationButton_Click"
-                                                Style="{StaticResource ButtonStyle}"
-                                                Content="Book now"/>
-                                    </StackPanel>
-                                    
-
+                                        <StackPanel Grid.Column="3"
+                                                    VerticalAlignment="Bottom">
+                                            <Border Background="{StaticResource SoftGreen}"
+                                                    Style="{StaticResource BorderStyle}">
+                                                <StackPanel>
+                                                    <TextBlock Grid.Row="1"
+                                                               FontSize="18"
+                                                               HorizontalAlignment="Center"
+                                                               Style="{StaticResource Info}">
+                                                        <TextBlock.Text>
+                                                            <MultiBinding StringFormat="{}{0}/{1}">
+                                                                <Binding Path="CurrentTouristNumber"/>
+                                                                <Binding Path="MaxTouristNumber"/>
+                                                            </MultiBinding>
+                                                        </TextBlock.Text>
+                                                    </TextBlock>
+                                                </StackPanel>
+                                            </Border>
+                                            <Button x:Name="ReservationButton"
+                                                    Click="ReservationButton_Click"
+                                                    Style="{StaticResource ButtonStyle}"
+                                                    Content="Book now"/>
+                                        </StackPanel>
+                                    </Grid>
                                 </Grid>
                             </Border>
                         </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
+                    </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </ScrollViewer>
     </Grid>
     </Border>
