--- a/WPF/Android/Views/AccommodationStatisticsPage.xaml
+++ b/WPF/Android/Views/AccommodationStatisticsPage.xaml
@@ -64,9 +64,10 @@
                         </Grid>
                     </Border>
                     <ScrollViewer HorizontalScrollBarVisibility="Hidden" Margin="0,10,0,0" VerticalScrollBarVisibility="Hidden" Height="350" Width="400">
-                        <StackPanel Orientation="Vertical" Height="850" Width="400">
-
-                            <lvc:CartesianChart x:Name="reservationsYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1">
+                        <StackPanel Orientation="Vertical" Width="400">
+                            <Label Style="{StaticResource Labels}" Content="Number of Reservations" HorizontalAlignment="Center" Background="{StaticResource Green}"/>
+                            
+                            <lvc:CartesianChart x:Name="reservationsYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1" Margin="5,10,10,10">
                                 <lvc:CartesianChart.AxisX>
                                     <lvc:Axis Title="Year" Labels="{Binding Years}" />
                                 </lvc:CartesianChart.AxisX>
@@ -78,7 +79,8 @@
                                 </lvc:CartesianChart.Series>
                             </lvc:CartesianChart>
 
-                            <lvc:CartesianChart x:Name="reservationsCancelledYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1">
+                            <Label Style="{StaticResource Labels}" Content="Number of Reservations Cancelled" HorizontalAlignment="Center" Background="{StaticResource Green}"/>
+                            <lvc:CartesianChart x:Name="reservationsCancelledYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1" Margin="5,10,10,10">
                                 <lvc:CartesianChart.AxisX>
                                     <lvc:Axis Title="Year" Labels="{Binding Years}" />
                                 </lvc:CartesianChart.AxisX>
@@ -90,7 +92,8 @@
                                 </lvc:CartesianChart.Series>
                             </lvc:CartesianChart>
 
-                            <lvc:CartesianChart x:Name="reservationsPostponedYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1">
+                            <Label Style="{StaticResource Labels}" Content="Number of Postponed Reservations" HorizontalAlignment="Center" Background="{StaticResource Green}"/>
+                            <lvc:CartesianChart x:Name="reservationsPostponedYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1" Margin="5,10,10,10">
                                 <lvc:CartesianChart.AxisX>
                                     <lvc:Axis Title="Year" Labels="{Binding Years}" />
                                 </lvc:CartesianChart.AxisX>
@@ -102,7 +105,8 @@
                                 </lvc:CartesianChart.Series>
                             </lvc:CartesianChart>
 
-                            <lvc:CartesianChart x:Name="reservationsRecommendedYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1">
+                            <Label Style="{StaticResource Labels}" Content="Number of Recommended Renovations" HorizontalAlignment="Center" Background="{StaticResource Green}"/>
+                            <lvc:CartesianChart x:Name="reservationsRecommendedYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1" Margin="5,10,10,10">
                                 <lvc:CartesianChart.AxisX>
                                     <lvc:Axis Title="Year" Labels="{Binding Years}" />
                                 </lvc:CartesianChart.AxisX>
@@ -148,9 +152,10 @@
                         </Grid>
                     </Border>
                     <ScrollViewer HorizontalScrollBarVisibility="Hidden" Margin="0,10,0,0" VerticalScrollBarVisibility="Hidden" Height="350" Width="400">
-                        <StackPanel Orientation="Vertical" Height="850" Width="400">
-
-                            <lvc:CartesianChart x:Name="reservationsMonthlyChart" Height="200" BorderBrush="Black" BorderThickness="1">
+                        <StackPanel Orientation="Vertical" Width="400">
+                            
+                            <Label Style="{StaticResource Labels}" Content="Number of Reservations" HorizontalAlignment="Center" Background="{StaticResource Green}"/>
+                            <lvc:CartesianChart x:Name="reservationsMonthlyChart" Height="200" BorderBrush="Black" BorderThickness="1" Margin="5,10,10,10">
                                 <lvc:CartesianChart.AxisX>
                                     <lvc:Axis Title="Months" Labels="{Binding Months}" />
                                 </lvc:CartesianChart.AxisX>
@@ -162,7 +167,8 @@
                                 </lvc:CartesianChart.Series>
                             </lvc:CartesianChart>
 
-                            <lvc:CartesianChart x:Name="reservationsMonthlyYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1">
+                            <Label Style="{StaticResource Labels}" Content="Number of Reservations Cancelled" HorizontalAlignment="Center" Background="{StaticResource Green}"/>
+                            <lvc:CartesianChart x:Name="reservationsMonthlyYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1" Margin="5,10,10,10">
                                 <lvc:CartesianChart.AxisX>
                                     <lvc:Axis Title="Months" Labels="{Binding Months}" />
                                 </lvc:CartesianChart.AxisX>
@@ -174,7 +180,8 @@
                                 </lvc:CartesianChart.Series>
                             </lvc:CartesianChart>
 
-                            <lvc:CartesianChart x:Name="postponedMonthlyYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1">
+                            <Label Style="{StaticResource Labels}" Content="Number of Reservations Postponed" HorizontalAlignment="Center" Background="{StaticResource Green}"/>
+                            <lvc:CartesianChart x:Name="postponedMonthlyYearlyChart" Height="200" BorderBrush="Black" BorderThickness="1" Margin="5,10,10,10">
                                 <lvc:CartesianChart.AxisX>
                                     <lvc:Axis Title="Months" Labels="{Binding Months}" />
                                 </lvc:CartesianChart.AxisX>
@@ -186,7 +193,8 @@
                                 </lvc:CartesianChart.Series>
                             </lvc:CartesianChart>
 
-                            <lvc:CartesianChart x:Name="reservationsRecommendedMonthlyChart" Height="200" BorderBrush="Black" BorderThickness="1">
+                            <Label Style="{StaticResource Labels}" Content="Number of Recommended Renovations" HorizontalAlignment="Center" Background="{StaticResource Green}"/>
+                            <lvc:CartesianChart x:Name="reservationsRecommendedMonthlyChart" Height="200" BorderBrush="Black" BorderThickness="1" Margin="5,10,10,10">
                                 <lvc:CartesianChart.AxisX>
                                     <lvc:Axis Title="Months" Labels="{Binding Months}" />
                                 </lvc:CartesianChart.AxisX>
