--- a/WPF/Android/Views/RescheduleRequestDeclineWindow.xaml
+++ b/WPF/Android/Views/RescheduleRequestDeclineWindow.xaml
@@ -7,6 +7,29 @@
         mc:Ignorable="d"
         Title="RescheduleRequestDeclineWindow" Height="300" Width="300"
         WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <Style TargetType="Button" x:Key="DisabledButtonStyle">
+            <Setter Property="Background" Value="{StaticResource Green}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="Black" BorderThickness="1">
+                            <ContentPresenter/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#5a8c6b"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+
     <Grid Background="{StaticResource Beige}">
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
@@ -18,6 +41,12 @@
         <Border Height="140" Grid.Row="1" Width="250" BorderBrush="Black" BorderThickness="1" VerticalAlignment="Top" Margin="0,10,0,0"  HorizontalAlignment="Center">
             <TextBox Text="{Binding RescheduleRequestDTO.OwnerComment}" Margin="0" Background="Transparent"/>
         </Border>
-        <Button Grid.Row="2" Height="50" Width="100" Content="Confirm" FontSize="16" VerticalAlignment="Top" Click="Button_Click" Background="{StaticResource Green}"/>
+        <Button Grid.Row="2" Height="50" Width="130" FontSize="16" VerticalAlignment="Top" Click="Button_Click" Background="{StaticResource Green}"
+                Style="{StaticResource DisabledButtonStyle}">
+            <StackPanel Orientation="Horizontal" Margin="5,0,0,0">
+                <Image Source="{StaticResource ConfirmIcon}" Height="30" Width="30"/>
+                <Label Content="Confirm" VerticalAlignment="Center"/>
+            </StackPanel>
+        </Button>
     </Grid>
 </Window>
