--- a/WPF/Android/Views/ViewSelectedImagesWindow.xaml
+++ b/WPF/Android/Views/ViewSelectedImagesWindow.xaml
@@ -10,6 +10,27 @@
         Title="ViewSelectedImagesWindow" Height="450" Width="400">
     <Window.Resources>
         <converters:PathToImageConverter x:Key="Converter"/>
+        <Style TargetType="Button" x:Key="DisabledButtonStyle">
+            <Setter Property="Background" Value="{StaticResource Green}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="Black" BorderThickness="1">
+                            <ContentPresenter/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#5a8c6b"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
     </Window.Resources>
     <Grid Background="{StaticResource Beige}">
         <Grid.ColumnDefinitions>
@@ -47,7 +68,13 @@
         </ScrollViewer>
         </Border>
 
-        <Button Content="Done" Height="50" Width="120" Grid.Row="2" HorizontalAlignment="Center" Grid.Column="1" Click="Button_Click"
-                Background="{StaticResource Green}"/>
+        <Button Height="50" Width="130" VerticalAlignment="Center" Grid.Row="2" HorizontalAlignment="Center" Grid.Column="1" Click="Button_Click"
+                Style="{StaticResource DisabledButtonStyle}">
+            <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
+                <Image Source="{StaticResource ConfirmIcon}" Height="30" Width="30"/>
+                <Label Content="Confirm" VerticalAlignment="Center"/>
+            </StackPanel>
+        </Button>
+
     </Grid>
 </Window>
